<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FinalResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:textColor="#571263"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congrats_msg"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#03A9F4"/>

        <TextView
            android:id="@+id/winner_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/winner"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#EA786F"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:background="#000000"
        android:layout_height="2dp"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/score_icon"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leaderboard"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:layout_margin="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:paddingEnd="30dp"
            android:background="#EA135C">

            <TextView
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="1"
                android:gravity="center"
                android:paddingStart="20dp"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/first_score"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="800"
                android:gravity="center"
                android:layout_alignParentEnd="true"
                android:paddingStart="20dp"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:paddingEnd="30dp"
            android:background="#673AB7">

            <TextView
                android:id="@+id/second_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="2"
                android:gravity="center"
                android:paddingStart="20dp"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/second_score"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="700"
                android:gravity="center"
                android:layout_alignParentEnd="true"
                android:paddingStart="20dp"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:paddingEnd="30dp"
            android:background="#03A9F4">

            <TextView
                android:id="@+id/third_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="3"
                android:gravity="center"

                android:paddingStart="20dp"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/third_score"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="600"
                android:gravity="center"
                android:layout_alignParentEnd="true"
                android:paddingStart="20dp"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:paddingEnd="30dp"
            android:background="#FF9800">

            <TextView
                android:id="@+id/fourth_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="4"
                android:gravity="center"
                android:paddingStart="20dp"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/fourth_score"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="500"
                android:gravity="center"
                android:layout_alignParentEnd="true"
                android:paddingStart="20dp"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/next_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:text="@string/next_game"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>

</LinearLayout>